# microfarm.messaging

./: compile.sh  setup.cfg  setup.py
messages/: notification.proto  persistence.proto  requests.proto
src/microfarm/messaging/: __init__.py
src/microfarm/messaging/messages/: notification_pb2.py  persistence_pb2.py  requests_pb2.py
